--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
      <div class="navbar-header">
        <a class="navbar-brand" href="#">One For One</a>
      </div>
-  <ul class="nav navbar-nav navbar-right">
+  <ul class="nav navbar-nav navbar-left">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="about">About</a></li>
     <li><a href="oneforone">One for One</a></li>
@@ -20,12 +20,12 @@
   </ul>
 </nav>
 </div>
-  <div class="container-fluid col-sm-12" id="banner">
-    <div class="bg"></div>
-    <div class="jumbotron">
-  <h1>One for One</h1>
+    <div class="bg">
+    <div class="herotext">
+  <h1 id="mainheading">One for One</h1>
   <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive,
   mobile-first projects on the web.</p>
+</div>
 </div>
   <div class="container-fluid col-sm-12" id="about">
     <h1 class="text-center">About</h1>
