Form and Paragraphs

--- a/Index.html
+++ b/Index.html
@@ -22,19 +22,43 @@
 </div>
     <div class="bg">
     <div class="herotext">
-  <h1 id="mainheading">One for One</h1>
-  <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive,
-  mobile-first projects on the web.</p>
+  <h1 style="color:white;" id="mainheading">One for One</h1>
 </div>
 </div>
-  <div class="container-fluid col-sm-12" id="about">
+  <div class="container col-sm-12" id="about">
     <h1 class="text-center">About</h1>
+      <p class="text-center">Coined in 2006 by TOMS founder Blake Mycoskie, the One for One model is a concept
+        which brings buying and giving together. From inception, TOMS shoes matched every pair of shoes purchased
+        by providing a new pair of shoes for a child in need. One for One, is a platform which promotes and informs of social enterprises which like TOMS
+        have adopted a One for One model. Each month we update our One for One portfolio with new
+        businesses to bring awareness to such a great initiative! .</p>
   </div>
   <div class="container-fluid col-sm-12" id="oneforone">
     <h1 class="text-center">One for One</h1>
   </div>
-  <div class="container-fluiD col-sm-12" id="contact">
-    <h1 class="text-center">Connect us</h1>
+  <div class="container-fluid col-sm-12" id="contact">
+    <h1 class="text-center">Contact us</h1>
+     <h3 class="text-center">Let's Stay Connected</h2>
+       <p class="text-center">Keep updated with all the very lates One for One exclusives, including discounts,
+         offers competitions and events. Or drop us a message if you would like more information on a
+         specific topic.</p>
+     <form action="/action_page.php">
+      <div class="form-group">
+       <label for="name">Name*:</label>
+       <input type="name" class="form-control" id="name">
   </div>
-</body>
+      <div class="form-group">
+       <label for="email">Email Address*:</label>
+       <input type="email" class="form-control" id="email">
+  </div>
+  <div class="form-group">
+       <label for="subject">Subject:</label>
+       <input type="subject" class="form-control" id="subject">
+  </div>
+      <div class="form-group">
+       <label for="Message">Message:</label>
+      <textarea class="form-control" rows="5" id="Message"></textarea>
+  </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+      </form>
 </html>
