Images for grid added

--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
   <ul class="nav navbar-nav navbar-left">
     <li class="active"><a href="#">Home</a></li>
     <li><a href="about">About</a></li>
-    <li><a href="oneforone">One for One</a></li>
+    <li><a href="oneforone">One for One Portfolio</a></li>
     <li><a href="contact">Contact us</a></li>
   </ul>
 </nav>
@@ -28,17 +28,53 @@
   <div class="container col-sm-12" id="about">
     <h1 class="text-center">About</h1>
       <p class="text-center">Coined in 2006 by TOMS founder Blake Mycoskie, the One for One model is a concept
-        which brings buying and giving together. From inception, TOMS shoes matched every pair of shoes purchased
-        by providing a new pair of shoes for a child in need. One for One, is a platform which promotes and informs of social enterprises which like TOMS
-        have adopted a One for One model. Each month we update our One for One portfolio with new
-        businesses to bring awareness to such a great initiative! .</p>
+        which brings buying and giving together.
+      <p class="text-center"> Since inception, TOMS shoes matched every pair of shoes purchased by providing a
+        new pair of shoes for a child in need.</p>
+      <p class="text-center">One for One, is a platform which promotes and informs of social
+        enterprises which like TOMS have adopted a One for One model.</p>
+      <p class="text-center">Each month we update our One for One portfolio with new businesses to bring
+         awareness to such a great initiative!</p>
+      <img src="ofo.jpg" class="center-block" alt="ofo" style="width:75%">
   </div>
   <div class="container-fluid col-sm-12" id="oneforone">
-    <h1 class="text-center">One for One</h1>
+    <h1 class="text-center">One for One Portfolio</h1>
+<div class="row">
+<div class="col-md-4">
+  <div class="thumbnail">
+      <img src="toms.png" alt="toms" style="width:100%">
+      </div>
   </div>
-  <div class="container-fluid col-sm-12" id="contact">
+</div>
+<div class="col-md-4">
+  <div class="thumbnail">
+      <img src="babyteresa.jpg" alt="babyteresa" style="width:100%">
+      </div>
+  </div>
+<div class="col-md-4">
+    <div class="thumbnail">
+        <img src="Bixbee.jpg" alt="toms" style="width:100%">
+        </div>
+  </div>
+<div class="col-md-4">
+    <div class="thumbnail">
+         <img src="bwb.jpeg" alt="bwb" style="width:100%">
+         </div>
+  </div>
+<div class="col-md-4">
+  <div class="thumbnail">
+         <img src="owop.png" alt="owop" style="width:100%">
+         </div>
+  </div>
+<div class="col-md-4">
+   <div class="thumbnail">
+         <img src="HH.png" alt="HH" style="width:100%">
+         </div>
+  </div>
+  <div class=".container col-sm-12" id="contact">
     <h1 class="text-center">Contact us</h1>
      <h3 class="text-center">Let's Stay Connected</h2>
+        <img src="connect.jpg" class="center-block" alt="connect">
        <p class="text-center">Keep updated with all the very lates One for One exclusives, including discounts,
          offers competitions and events. Or drop us a message if you would like more information on a
          specific topic.</p>
