--- a/Index.html
+++ b/Index.html
@@ -27,6 +27,8 @@
 </div>
   <div class="container col-sm-12" id="about">
     <h1 class="text-center">About</h1>
+     <img src="ofo.jpg" class="center-block" alt="ofo" style="width:50%">
+     <p> </p>
       <p class="text-center">Coined in 2006 by TOMS founder Blake Mycoskie, the One for One model is a concept
         which brings buying and giving together.
       <p class="text-center"> Since inception, TOMS shoes matched every pair of shoes purchased by providing a
@@ -35,7 +37,6 @@
         enterprises which like TOMS have adopted a One for One model.</p>
       <p class="text-center">Each month we update our One for One portfolio with new businesses to bring
          awareness to such a great initiative!</p>
-      <img src="ofo.jpg" class="center-block" alt="ofo" style="width:75%">
   </div>
   <div class="container-fluid col-sm-12" id="oneforone">
     <h1 class="text-center">One for One Portfolio</h1>
@@ -75,9 +76,10 @@
     <h1 class="text-center">Contact us</h1>
      <h3 class="text-center">Let's Stay Connected</h2>
         <img src="connect.jpg" class="center-block" alt="connect">
+        <p> </p>
        <p class="text-center">Keep updated with all the very lates One for One exclusives, including discounts,
-         offers competitions and events. Or drop us a message if you would like more information on a
-         specific topic.</p>
+         offers competitions and events.</p>
+       <p class="text-center">Or drop us a message if you would like more information on a specific topic.</p>
      <form action="/action_page.php">
       <div class="form-group">
        <label for="name">Name*:</label>
