Image and page updates

--- a/Index.html
+++ b/Index.html
@@ -13,69 +13,72 @@
        <a class="navbar-brand" href="#">One For One</a>
      </div>
   <ul class="nav navbar-nav navbar-left">
-    <li class="active"><a href="#">Home</a></li>
-    <li><a href="about">About</a></li>
-    <li><a href="oneforone">One for One Portfolio</a></li>
-    <li><a href="contact">Contact us</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="#oneforone">One for One Portfolio</a></li>
+    <li><a href="#contact">Contact us</a></li>
   </ul>
 </nav>
 </div>
     <div class="bg">
-    <div class="herotext">
-  <h1 style="color:white;" id="mainheading">One for One</h1>
+<div class="herotext">
+  <h1 class= "herotext" style="color:white;" id="mainheading">One for One</h1>
 </div>
 </div>
-  <div class="container col-sm-12" id="about">
-    <h1 class="text-center">About</h1>
-     <img src="ofo.jpg" class="center-block" alt="ofo" style="width:50%">
-     <p> </p>
-      <p class="text-center">Coined in 2006 by TOMS founder Blake Mycoskie, the One for One model is a concept
-        which brings buying and giving together.
-      <p class="text-center"> Since inception, TOMS shoes matched every pair of shoes purchased by providing a
-        new pair of shoes for a child in need.</p>
-      <p class="text-center">One for One, is a platform which promotes and informs of social
-        enterprises which like TOMS have adopted a One for One model.</p>
-      <p class="text-center">Each month we update our One for One portfolio with new businesses to bring
-         awareness to such a great initiative!</p>
-  </div>
-  <div class="container-fluid col-sm-12" id="oneforone">
-    <h1 class="text-center">One for One Portfolio</h1>
-<div class="row">
-<div class="col-md-4">
-  <div class="thumbnail">
-      <img src="toms.png" alt="toms" style="width:100%">
-      </div>
-  </div>
-</div>
-<div class="col-md-4">
-  <div class="thumbnail">
-      <img src="babyteresa.jpg" alt="babyteresa" style="width:100%">
-      </div>
-  </div>
-<div class="col-md-4">
-    <div class="thumbnail">
-        <img src="Bixbee.jpg" alt="toms" style="width:100%">
+<img src="run.jpg">
+    <div class="container-fluid col-sm-12" id="oneforone">
+        <h1 class="text-center">One for One Portfolio</h1>
+
+        <p class="text-center"> This month we are looking at a range of One for One enterprises from in industries
+            including clothing, footwear, books and toiletries.
+
+        <div class="row">
+
+        <div class="col-md-4">
+          <div class="thumbnail">
+              <img src="toms.png" alt="toms" style="width:100%">
+          </div>
         </div>
-  </div>
-<div class="col-md-4">
-    <div class="thumbnail">
-         <img src="bwb.jpeg" alt="bwb" style="width:100%">
-         </div>
-  </div>
-<div class="col-md-4">
-  <div class="thumbnail">
-         <img src="owop.png" alt="owop" style="width:100%">
-         </div>
-  </div>
-<div class="col-md-4">
-   <div class="thumbnail">
-         <img src="HH.png" alt="HH" style="width:100%">
-         </div>
-  </div>
+
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="babyteresa.jpg" style="width:100%" id="babyteresa" >
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="Bixbee.jpg" style="width:100%" id="toms" >
+            </div>
+        </div>
+
+    </div>
+
+    <div class="row">
+
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="bwb.jpeg" style="width:100%" id="bwb">
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="HH.png" style="width:100%" id="HH">
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="owop.png" style="width:100%" id="owop" >
+            </div>
+        </div>
+
+    </div>
+
   <div class=".container col-sm-12" id="contact">
     <h1 class="text-center">Contact us</h1>
      <h3 class="text-center">Let's Stay Connected</h2>
-        <img src="connect.jpg" class="center-block" alt="connect">
+        <img src="ofo2.jpg" class="center-block" style="width:50%">
         <p> </p>
        <p class="text-center">Keep updated with all the very lates One for One exclusives, including discounts,
          offers competitions and events.</p>
@@ -99,4 +102,5 @@
   </div>
       <button type="submit" class="btn btn-default">Submit</button>
       </form>
+      <img src="connect.jpg" class="center-block" style="width:25%">
 </html>
