--- a/about.html
+++ b/about.html
@@ -14,12 +14,25 @@
      </div>
   <ul class="nav navbar-nav navbar-left">
     <li class="active"><a href="#">Home</a></li>
-    <li><a href="about">About</a></li>
-    <li><a href="oneforone">One for One Portfolio</a></li>
-    <li><a href="contact">Contact us</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="index.html">What we do</a></li>
+    <li><a href="index.html">One for One Portfolio</a></li>
+    <li><a href="index.html">Contact us</a></li>
   </ul>
 </nav>
 </div>
 
+<h1 class="text-center">About</h1>
+ <br>
+  <p class="text-center">Coined in 2006 by TOMS founder Blake Mycoskie, the One for One model is a concept
+    which brings buying and giving together.
+  <p class="text-center"> Since inception, TOMS shoes matched every pair of shoes purchased by providing a
+    new pair of shoes for a child in need.</p>
+  <p class="text-center">One for One, is a platform which promotes and informs of social
+    enterprises which like TOMS have adopted a One for One model.</p>
+  <p class="text-center">Each month we update our One for One portfolio with new businesses to bring
+     awareness to such a great initiative!</p>
+
+<img src="ofo.jpg" class="center-block" alt="ofo" style="width:50%">
 
 </html>
