--- a/Index.html
+++ b/Index.html
@@ -25,29 +25,31 @@
 </div>
 </div>
 <img src="run.jpg">
+<img src="kids.jpeg" width="100%">
     <div class="container-fluid col-sm-12" id="oneforone">
         <h1 class="text-center">One for One Portfolio</h1>
 
         <p class="text-center"> This month we are looking at a range of One for One enterprises from in industries
-            including clothing, footwear, books and toiletries.
+            including clothing, footwear, books and toiletries.</p>
+        <p class="text-center"> Click the individual images to find out more information on each organisation. </p>
 
         <div class="row">
 
         <div class="col-md-4">
           <div class="thumbnail">
-              <img src="toms.png" alt="toms" style="width:100%">
+             <a href="https://www.toms.co.uk/"> <img src="toms.jpg" alt="toms" style="width:100%"></a>
           </div>
         </div>
 
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="babyteresa.jpg" style="width:100%" id="babyteresa" >
+                <a href="https://babyteresa.com.au/"> <img src="babyteresa.jpg"style="width:100%"></a>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="Bixbee.jpg" style="width:100%" id="toms" >
+                <a href="https://www.bixbee.com/"> <img src="Bixbee.jpg"style="width:100%"></a>
             </div>
         </div>
 
@@ -57,19 +59,19 @@
 
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="bwb.jpeg" style="width:100%" id="bwb">
+                <a href="https://www.betterworldbooks.com/"> <img src="bwb.jpeg"style="width:100%"></a>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="HH.png" style="width:100%" id="HH">
+                <a href="https://www.handinhandsoap.com/"> <img src="HH.png"style="width:100%"></a>
             </div>
         </div>
 
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="owop.png" style="width:100%" id="owop" >
+                <a href="https://www.oneworldplayproject.com/"> <img src="owop2.png"style="width:100%"></a>
             </div>
         </div>
 
