--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
        <a class="navbar-brand" href="#">One For One</a>
      </div>
   <ul class="nav navbar-nav navbar-left">
-    <li class="active"><a href="#">Home</a></li>
+    <li class="active"><a href="index.html">Home</a></li>
     <li><a href="index.html">One for One Portfolio</a></li>
     <li><a href="index.html">Contact us</a></li>
   </ul>
@@ -30,7 +30,8 @@
     enterprises which like TOMS have adopted a One for One model.</p>
   <p class="text-center">Each month we update our One for One portfolio with new businesses to bring
      awareness to such a great initiative!</p>
-
+  <br>
+  <br>
 <img src="ofo.jpg" class="center-block" alt="ofo" style="width:50%">
 
 </html>
